--- a/index.html
+++ b/index.html
@@ -58,37 +58,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
-    <div class="main_container">
-        <div class="main-image-section" id="mainImageSection">
-            <img src="/src/images/SUP_logo.jpg" alt="img" id="main_image"/>
-        </div>
-        <div class="main-text-section" id="mainTextSection"></div>
+  <div class="top-bar" id="topBar">
+    <div class="burger-menu" id="burger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
-    <div class="content">
-        <!-- Add enough content to ensure scrolling -->
-        <p>Content for scrolling...</p>
-        <p>Content for scrolling...</p>
-        <p>Content for scrolling...</p>
-        <p>Content for scrolling...</p>
-        <p>Content for scrolling...</p>
-        <p>Content for scrolling...</p>
-        <p>Content for scrolling...</p>
-        <p>Content for scrolling...</p>
-        <p>Content for scrolling...</p>
-        <p>Content for scrolling...</p>
-        <p>Content for scrolling...</p>
-        <p>Content for scrolling...</p>
-        <p>Content for scrolling...</p>
-        <p>Content for scrolling...</p>
-        <p>Content for scrolling...</p>
+  </div>
+  <div class="main-container">
+      <div class="main-image-section" id="mainImageSection">
+          <img src="/src/images/SUP_logo.jpg" alt="img" id="main_image"/>
+      </div>
+      <div class="main-text-section" id="mainTextSection"></div>
+  </div>
+  <div class="box-container">
+    <div id="title">
+      <h1> WHO WE ARE </h1>
     </div>
-    <div class="top-bar" id="topBar">
-        <div class="burger-menu" id="burger-menu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
+    <div class="box">
+      <div class="image-box">
+         <img src="src/images/Msolaimani.png" alt="img" />
+      </div>
+      <div class="text-box">
+        <h2> Morris Solaimani </h2>
+        <p>
+          Experienced Property Specialist with a demonstrated history of working in the real estate industry. Skilled in Negotiation, Lettings, Sales, Entrepreneurship, Asset Management, and Sales Management.
+        </p>
+      </div>
     </div>
-    <script type="module" src="/src/main.js"></script>
+  </div>
+  
+  <script type="module" src="/src/main.js"></script>
 </body>
 </html>
