--- a/index.html
+++ b/index.html
@@ -1,54 +1,3 @@
-<!-- <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Step-Up Properties</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="main_container">
-      <div class="main-image-section" id="mainImageSection">
-        <img src="/src/images/SUP_logo.jpg" alt="img" id="main_image"/>
-      </div>
-      <div class="main-text-section" id="mainTextSection"></div>
-    </div>
-    <div style="height: 200vh;">
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-      <p>asdasdasd</p>
-
-      <p>asdasdasd</p><p>asdasdasd</p>
-      <p>asdasdasd</p>
-    </div> 
-    <div class="top-bar" id="topBar">
-      <div class="burger-menu" id="burger-menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
-</html> -->
-
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -59,31 +8,109 @@
 </head>
 <body id="body">
   <div class="top-bar" id="topBar">
+    <img src ="/src/images/SUP_small_logo.jpg" alt="icon" id="icon"/>
+    <h1>STEPUP PROPERTIES</h1>
     <div class="burger-menu" id="burger-menu">
         <span></span>
         <span></span>
         <span></span>
     </div>
   </div>
-  <div class="main-container">
+  <div class="main-container" id="mainContainer">
       <div class="main-image-section" id="mainImageSection">
           <img src="/src/images/SUP_logo.jpg" alt="img" id="main_image"/>
       </div>
       <div class="main-text-section" id="mainTextSection"></div>
   </div>
+  <div class="map-intro-container">
+    <div id="title">
+      <h1> OUR AREA </h1>
+    </div>
+    <div id="mapIntroContainer">
+      <div class="map-container" id="mapContainer">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9916.242692672078!2d-0.2394098302246093!3d51.58545138212817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487610c5529a0749%3A0xcdff3537b6aa4a45!2sHendon%2C%20London!5e0!3m2!1sen!2suk!4v1721213964448!5m2!1sen!2suk"
+          width="600"
+          height="450"
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy" 
+          referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+      </div>
+      <div class="intro-text-section" id="introTextSection">
+        <p>Nestled in the heart of Hendon, our agency boasts a deep-rooted connection to the local community and an intimate understanding of the property landscape in NW4 and its surroundings. With a team of seasoned professionals, each equipped with a wealth of expertise and a passion for real estate, we are dedicated to providing personalised solutions tailored to your unique requirements.
+        </p>
+      </div>
+    </div>
+  </div>
   <div class="box-container">
     <div id="title">
       <h1> WHO WE ARE </h1>
     </div>
-    <div class="box">
-      <div class="image-box">
-         <img src="src/images/Msolaimani.png" alt="img" />
+    <div class="box" id="box"></div>
+  </div>
+  <div class="carr-container">
+    <h1> OUR PROPERTIES </h1>
+    <div class="carr" id="carr">
+      <div class="slides" id="slides">
+        <div class="slide" id="1">
+          <iframe
+           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9925.239751234823!2d-0.27221469213618793!3d51.54421550271216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487611bc85151c83%3A0x2aa970f4c84f5c88!2s91%20Church%20Rd%2C%20London%20NW4%204DS!5e0!3m2!1sen!2suk!4v1721232789431!5m2!1sen!2suk"
+            width="350"
+            height="350" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+          <div class="info">
+            <h1> 91C Church Road </h1>
+            <p> DESCRIPTION </p>
+          </div>
+          <a class="slide-prev" href="#2" title="Prev"></a>
+          <a class="slide-next" href="#3" title="Next"></a>
+        </div>
+        <div class="slide" id="2">
+          <iframe
+           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9925.239751234823!2d-0.27221469213618793!3d51.54421550271216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487611bc85151c83%3A0x2aa970f4c84f5c88!2s91%20Church%20Rd%2C%20London%20NW4%204DS!5e0!3m2!1sen!2suk!4v1721232789431!5m2!1sen!2suk"
+            width="350"
+            height="350" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+          <div class="info">
+            <h1> 91C Church Road </h1>
+            <p> DESCRIPTION </p>
+          </div>
+          <a class="slide-prev" href="#2" title="Prev"></a>
+          <a class="slide-next" href="#3" title="Next"></a>
+        </div>
+        <div class="slide" id="3">
+          <iframe
+           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9925.239751234823!2d-0.27221469213618793!3d51.54421550271216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487611bc85151c83%3A0x2aa970f4c84f5c88!2s91%20Church%20Rd%2C%20London%20NW4%204DS!5e0!3m2!1sen!2suk!4v1721232789431!5m2!1sen!2suk"
+            width="350"
+            height="350" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+          <div class="info">
+            <h1> 91C Church Road </h1>
+            <p> DESCRIPTION </p>
+          </div>
+          <a class="slide-prev" href="#2" title="Prev"></a>
+          <a class="slide-next" href="#3" title="Next"></a>
+        </div>
       </div>
-      <div class="text-box">
-        <h2> Morris Solaimani </h2>
-        <p>
-          Experienced Property Specialist with a demonstrated history of working in the real estate industry. Skilled in Negotiation, Lettings, Sales, Entrepreneurship, Asset Management, and Sales Management.
-        </p>
+      <div class="slides-nav">
+        <a class="slides-navlink" href="#1"></a>
+        <a class="slides-navlink" href="#2"></a>
+        <a class="slides-navlink" href="#3"></a>
+
       </div>
     </div>
   </div>
