--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Step-Up Properties</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body id="body">
+<body id="body">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
   <div class="top-bar" id="topBar">
     <img src ="/src/images/SUP_small_logo.jpg" alt="icon" id="icon"/>
     <h1>STEPUP PROPERTIES</h1>
@@ -59,7 +59,7 @@
            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9925.239751234823!2d-0.27221469213618793!3d51.54421550271216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487611bc85151c83%3A0x2aa970f4c84f5c88!2s91%20Church%20Rd%2C%20London%20NW4%204DS!5e0!3m2!1sen!2suk!4v1721232789431!5m2!1sen!2suk"
             width="350"
             height="350" 
-            style="border:0;" 
+            style="border-radius:10px;" 
             allowfullscreen="" 
             loading="lazy" 
             referrerpolicy="no-referrer-when-downgrade">
@@ -68,15 +68,15 @@
             <h1> 91C Church Road </h1>
             <p> DESCRIPTION </p>
           </div>
-          <a class="slide-prev" href="#2" title="Prev"></a>
-          <a class="slide-next" href="#3" title="Next"></a>
+          <a class="slide-prev" href="#3" title="Prev"></a>
+          <a class="slide-next" href="#2" title="Next"></a>
         </div>
         <div class="slide" id="2">
           <iframe
            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9925.239751234823!2d-0.27221469213618793!3d51.54421550271216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487611bc85151c83%3A0x2aa970f4c84f5c88!2s91%20Church%20Rd%2C%20London%20NW4%204DS!5e0!3m2!1sen!2suk!4v1721232789431!5m2!1sen!2suk"
             width="350"
             height="350" 
-            style="border:0;" 
+            style="border-radius:10px;" 
             allowfullscreen="" 
             loading="lazy" 
             referrerpolicy="no-referrer-when-downgrade">
@@ -85,7 +85,7 @@
             <h1> 91C Church Road </h1>
             <p> DESCRIPTION </p>
           </div>
-          <a class="slide-prev" href="#2" title="Prev"></a>
+          <a class="slide-prev" href="#1" title="Prev"></a>
           <a class="slide-next" href="#3" title="Next"></a>
         </div>
         <div class="slide" id="3">
@@ -93,17 +93,18 @@
            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9925.239751234823!2d-0.27221469213618793!3d51.54421550271216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487611bc85151c83%3A0x2aa970f4c84f5c88!2s91%20Church%20Rd%2C%20London%20NW4%204DS!5e0!3m2!1sen!2suk!4v1721232789431!5m2!1sen!2suk"
             width="350"
             height="350" 
-            style="border:0;" 
+            style="border-radius:10px;" 
             allowfullscreen="" 
             loading="lazy" 
             referrerpolicy="no-referrer-when-downgrade">
+            
           </iframe>
           <div class="info">
             <h1> 91C Church Road </h1>
             <p> DESCRIPTION </p>
           </div>
           <a class="slide-prev" href="#2" title="Prev"></a>
-          <a class="slide-next" href="#3" title="Next"></a>
+          <a class="slide-next" href="#1" title="Next"></a>
         </div>
       </div>
       <div class="slides-nav">
