--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
   <div class="map-intro-container">
     <div id="title">
-      <h1> OUR AREA </h1>
+      <h1> WHERE ARE WE? </h1>
     </div>
     <div id="mapIntroContainer">
       <div class="map-container" id="mapContainer">
@@ -48,7 +48,7 @@
     <div id="title">
       <h1> WHO WE ARE </h1>
     </div>
-    <div class="box" id="box"></div>
+    <div class="employee-grid" id="box"></div>
   </div>
   <div class="carr-container">
     <h1> OUR PROPERTIES </h1>
