--- a/index.html
+++ b/index.html
@@ -53,66 +53,8 @@
   <div class="carr-container">
     <h1> OUR PROPERTIES </h1>
     <div class="carr" id="carr">
-      <div class="slides" id="slides">
-        <div class="slide" id="1">
-          <iframe
-           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9925.239751234823!2d-0.27221469213618793!3d51.54421550271216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487611bc85151c83%3A0x2aa970f4c84f5c88!2s91%20Church%20Rd%2C%20London%20NW4%204DS!5e0!3m2!1sen!2suk!4v1721232789431!5m2!1sen!2suk"
-            width="350"
-            height="350" 
-            style="border-radius:10px;" 
-            allowfullscreen="" 
-            loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
-          <div class="info">
-            <h1> 91C Church Road </h1>
-            <p> DESCRIPTION </p>
-          </div>
-          <a class="slide-prev" href="#3" title="Prev"></a>
-          <a class="slide-next" href="#2" title="Next"></a>
-        </div>
-        <div class="slide" id="2">
-          <iframe
-           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9925.239751234823!2d-0.27221469213618793!3d51.54421550271216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487611bc85151c83%3A0x2aa970f4c84f5c88!2s91%20Church%20Rd%2C%20London%20NW4%204DS!5e0!3m2!1sen!2suk!4v1721232789431!5m2!1sen!2suk"
-            width="350"
-            height="350" 
-            style="border-radius:10px;" 
-            allowfullscreen="" 
-            loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
-          <div class="info">
-            <h1> 91C Church Road </h1>
-            <p> DESCRIPTION </p>
-          </div>
-          <a class="slide-prev" href="#1" title="Prev"></a>
-          <a class="slide-next" href="#3" title="Next"></a>
-        </div>
-        <div class="slide" id="3">
-          <iframe
-           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9925.239751234823!2d-0.27221469213618793!3d51.54421550271216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487611bc85151c83%3A0x2aa970f4c84f5c88!2s91%20Church%20Rd%2C%20London%20NW4%204DS!5e0!3m2!1sen!2suk!4v1721232789431!5m2!1sen!2suk"
-            width="350"
-            height="350" 
-            style="border-radius:10px;" 
-            allowfullscreen="" 
-            loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade">
-            
-          </iframe>
-          <div class="info">
-            <h1> 91C Church Road </h1>
-            <p> DESCRIPTION </p>
-          </div>
-          <a class="slide-prev" href="#2" title="Prev"></a>
-          <a class="slide-next" href="#1" title="Next"></a>
-        </div>
-      </div>
-      <div class="slides-nav">
-        <a class="slides-navlink" href="#1"></a>
-        <a class="slides-navlink" href="#2"></a>
-        <a class="slides-navlink" href="#3"></a>
-
-      </div>
+      <div class="slides" id="slides"></div>
+      <div class="slides-nav"></div>
     </div>
   </div>
   
