--- a/index.html
+++ b/index.html
@@ -6,37 +6,42 @@
     <title>Step-Up Properties</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body id="body">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
-  <div class="top-bar" id="topBar">
-    <img src ="/src/images/SUP_small_logo.jpg" alt="icon" id="icon"/>
-    <h1>STEPUP PROPERTIES</h1>
-    <div class="burger-menu" id="burger-menu">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-  </div>
-  <div class="main-container" id="mainContainer">
-      <div class="main-image-section" id="mainImageSection">
-          <img src="/src/images/SUP_logo.jpg" alt="img" id="main_image"/>
+<body id="body"> 
+  <!-- <div class="wrapper">   -->
+    <div class="top-bar" id="topBar">
+      <!-- <a href="#mainCointainer"> -->
+        <img src ="/src/images/SUP_small_logo.jpg" alt="icon" id="icon"/>
+      <!-- </a> -->
+      <h1>STEPUP PROPERTIES</h1>
+      <div class="burger-menu" id="burger-menu">
+          <span></span>
+          <span></span>
+          <span></span>
       </div>
-      <div class="main-text-section" id="mainTextSection"></div>
-  </div>
-  <div class="map-intro-container"></div>
-  <div class="box-container">
-    <div id="title">
-      <h1> WHO WE ARE </h1>
     </div>
-    <div class="employee-grid" id="box"></div>
-  </div>
-  <div class="carr-container">
-    <h1> OUR PROPERTIES </h1>
-    <div class="carr" id="carr">
-      <div class="slides" id="slides"></div>
-      <div class="slides-nav"></div>
+    <div class="main-container inner-wrapper" id="mainContainer">
+        <div class="main-image-section" id="mainImageSection">
+            <img src="/src/images/SUP_logo.jpg" alt="img" id="main_image"/>
+        </div>
+        <div class="main-text-section" id="mainTextSection"></div>
     </div>
-  </div>
-  
+    <div class="map-intro-container inner-wrapper"></div>
+    <div class="box-container full-width-bg">
+      <div class="inner-wrapper">
+        <div id="title">
+          <h1> WHO WE ARE </h1>
+        </div>
+        <div class="employee-grid" id="box"></div>
+      </div>
+    </div>
+    <div class="carr-container">
+      <h1> OUR PROPERTIES </h1>
+      <div class="carr" id="carr">
+        <div class="slides" id="slides"></div>
+        <div class="slides-nav"></div>
+      </div>
+    <!-- </div> -->
+</div>
   <script type="module" src="/src/main.js"></script>
 </body>
 </html>
