--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Step-Up Properties</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="body"> 
@@ -12,7 +13,7 @@
       <!-- <a href="#mainCointainer"> -->
         <img src ="/src/images/SUP_small_logo.jpg" alt="icon" id="icon"/>
       <!-- </a> -->
-      <h1>STEPUP PROPERTIES</h1>
+      <h1 id="SUP">STEPUP PROPERTIES</h1>
       <div class="burger-menu" id="burger-menu">
           <span></span>
           <span></span>
@@ -28,14 +29,14 @@
     <div class="map-intro-container inner-wrapper"></div>
     <div class="box-container full-width-bg">
       <div class="inner-wrapper">
-        <div id="title">
-          <h1> WHO WE ARE </h1>
+        <div>
+          <h1 id="title"> WHO WE ARE </h1>
         </div>
         <div class="employee-grid" id="box"></div>
       </div>
     </div>
     <div class="carr-container">
-      <h1> OUR PROPERTIES </h1>
+      <h1 id="title"> OUR PROPERTIES </h1>
       <div class="carr" id="carr">
         <div class="slides" id="slides"></div>
         <div class="slides-nav"></div>
