--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="box-container full-width-bg">
       <div class="inner-wrapper">
         <div>
-          <h1 id="title"> WHO WE ARE </h1>
+          <h1 id="title"> WHO ARE WE? </h1>
         </div>
         <div class="employee-grid" id="box"></div>
       </div>
@@ -42,7 +42,15 @@
         <div class="slides-nav"></div>
       </div>
     <!-- </div> -->
-</div>
+    </div>
+    <div class="contact-container full-width-bg">
+      <h1 id="title"> START A CONVERSATION </h1>
+      <div class="contact-and-socials inner-wrapper">
+        <div id="contactFormDiv"></div>
+        <div class="vl"></div>
+        <div id="socialsDiv"></div>
+      </div>
+    </div>
   <script type="module" src="/src/main.js"></script>
 </body>
 </html>
