--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="body"> 
-  <!-- <div class="wrapper">   -->
     <div class="top-bar" id="topBar">
-      <!-- <a href="#mainCointainer"> -->
+      <a href="#mainCointainer">
         <img src ="/src/images/SUP_small_logo.jpg" alt="icon" id="icon"/>
-      <!-- </a> -->
+      </a>
       <h1 id="SUP">STEPUP PROPERTIES</h1>
       <div class="burger-menu" id="burger-menu">
           <span></span>
@@ -28,20 +27,20 @@
     </div>
     <div class="map-intro-container inner-wrapper"></div>
     <div class="box-container full-width-bg">
-      <div class="inner-wrapper">
+      <!-- <div class="inner-wrapper"> -->
         <div>
           <h1 id="title"> WHO ARE WE? </h1>
         </div>
         <div class="employee-grid" id="box"></div>
-      </div>
+      <!-- </div> -->
     </div>
-    <div class="carr-container">
+    <div class="photo-text-container inner-wrapper"></div>
+    <div class="carr-container inner-wrapper">
       <h1 id="title"> OUR PROPERTIES </h1>
       <div class="carr" id="carr">
         <div class="slides" id="slides"></div>
         <div class="slides-nav"></div>
       </div>
-    <!-- </div> -->
     </div>
     <div class="contact-container full-width-bg">
       <h1 id="title"> START A CONVERSATION </h1>
