--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body id="body"> 
     <div class="top-bar" id="topBar">
-      <a href="#mainCointainer">
-        <img src ="/src/images/SUP_small_logo.jpg" alt="icon" id="icon"/>
+      <a href="#mainCointainer" id="icon">
+        <img src ="/src/images/SUP_small_logo.jpg" alt="icon" />
       </a>
       <h1 id="SUP">STEPUP PROPERTIES</h1>
       <div class="burger-menu" id="burger-menu">
