--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="main-text-section" id="mainTextSection"></div>
     </div>
     <div class="map-intro-container inner-wrapper"></div>
+    <div class="zoomed-in-image full-width-bg"></div>
     <div class="box-container full-width-bg">
       <!-- <div class="inner-wrapper"> -->
         <div>
