--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body id="body"> 
     <div class="top-bar" id="topBar">
-      <a href="#mainCointainer" id="icon">
+      <a href=".mainCointainer" id="icon">
         <img src ="/src/images/SUP_small_logo.jpg" alt="icon" />
       </a>
       <h1 id="SUP">STEPUP PROPERTIES</h1>
@@ -26,7 +26,7 @@
         <div class="main-text-section" id="mainTextSection"></div>
     </div>
     <div class="map-intro-container inner-wrapper"></div>
-    <div class="zoomed-in-image full-width-bg"></div>
+    <div class="zoomed-in-image"></div>
     <div class="box-container full-width-bg">
       <!-- <div class="inner-wrapper"> -->
         <div>
